--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,11 @@ android {
 }
 
 dependencies {
+    implementation "androidx.room:room-runtime:2.4.1"
+    annotationProcessor "androidx.room:room-compiler:2.4.1"
+    implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
     implementation 'com.airbnb.android:lottie:4.2.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
