--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:name=".base.APP"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/la"
+        android:label="@string/app_name"
         android:networkSecurityConfig="@xml/net_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RedRockAssessmentOfWinterVacation"
         tools:targetApi="n">
+        <activity
+            android:name=".activity.LyricsActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.PlaylistSongActivity"
             android:exported="false" />
@@ -24,15 +28,16 @@
         <service
             android:name=".service.PlayMusicService"
             android:enabled="true"
-            android:exported="true">
-
-
-        </service>
+            android:exported="true"/>
 
         <activity
+
             android:name=".activity.HomePageActivity"
             android:exported="true" />
         <activity
+
+
+
             android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
