--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.redrock">
+    package="com.example.redrock" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".base.APP"
@@ -17,7 +17,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RedRockAssessmentOfWinterVacation"
-        tools:targetApi="n">
+        tools:targetApi="n" >
+        <activity
+            android:windowSoftInputMode="adjustResize"
+            android:name=".activity.CommentsActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.LyricsActivity"
             android:exported="false" />
@@ -28,18 +32,14 @@
         <service
             android:name=".service.PlayMusicService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <activity
-
             android:name=".activity.HomePageActivity"
             android:exported="true" />
         <activity
-
-
-
             android:name=".activity.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
