解决了一些歌词的显示bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name=".activity.CommentsActivity"
             android:exported="false" />
         <activity
+            android:launchMode="singleInstance"
             android:name=".activity.LyricsActivity"
             android:exported="false" />
         <activity
